--- a/custom_components/meteored/manifest.json
+++ b/custom_components/meteored/manifest.json
@@ -1,9 +1,11 @@
 {
   "domain": "meteored",
-  "name": "Meteo.it (Meteored)",
+  "name": "Meteored",
   "version": "1.0.0",
-  "config_flow": true,
   "documentation": "https://github.com/KSuondProject/Meteo.it-HA",
-  "requirements": [],
-  "codeowners": ["@KSuondProject"]
+  "requirements": ["aiohttp"],
+  "dependencies": [],
+  "codeowners": ["@KSuondProject"],
+  "config_flow": true,
+  "iot_class": "cloud_polling"
 }
